base/k8s/op-connect-operator/manager_config_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onepassword-connect-operator
  namespace: system
spec:
  template:
    spec:
      containers:
      - name: manager
