base/k8s/op-connect-operator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onepassword-connect
spec:
  type: NodePort
  selector:
    app: onepassword-connect
  ports:
    - port: 8080
      name: connect-api
      nodePort: 30080
    - port: 8081
      name: connect-sync
      nodePort: 30081
