base/k8s/op-connect-operator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: connect-ingress
  annotations:
    # Use cert-manager ClusterIssuer
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # Allow cert-manager to edit this Ingress resource in-place
    acme.cert-manager.io/http01-edit-in-place: "true"
    # Issue temporary self-signed cert
    cert-manager.io/issue-temporary-certificate: "true"
spec:
  # You may need to specify the IngressClass if your cluster does not have a
  # default IngressClass, e.g. for Ingress NGINX Controller, uncomment the
  # below line:
  ingressClassName: nginx
  rules:
    - host: 1password.k8s.integratn.tech
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: op-connect
              port:
                name: connect-api
  tls:
    - hosts:
      - 1password.k8s.integratn.tech
      secretName: connect-cert
